添加了 start 指令 添加了玩家进入服务器事件的监听器 取消只能由玩家执行指令

--- a/plugin.yml
+++ b/plugin.yml
@@ -14,6 +14,8 @@ commands:
     description: A command can set the runner to the game
   rtareload:
     description: A command can change the plugin settings
+  start:
+    description: A command can start the game
 
 #softdepend:
 #  - ProtocolSupport
