--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: SimpleRTA
 description: A simple plugin about RTA Game
-main: cn.widecss.SimpleRTA
-version: 0.1.0
+main: cn.widecss.SimpleRTAPlugin
+version: 0.8
 api-version: 1.16
 
 authors:
